Bug 481388 - Frame rate settings reset after closing project
Summary: Frame rate settings reset after closing project
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 5.2.2
Platform: Compiled Sources Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-02-15 23:29 UTC by imidio
Modified: 2024-02-26 14:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description imidio 2024-02-15 23:29:56 UTC
SUMMARY
***
Animation frame rate setting resets after closing and reopening project, but the number shows the value chosen by the user.
***


STEPS TO REPRODUCE
1. Change frame rate from default to any other (in my case from 24 to 12)
2. Save file, close Krita
3. Open file again

OBSERVED RESULT
The number in "frame rate" field shows 12, but actual framerate in the clip changes back to 24.

EXPECTED RESULT
Actual frame rate matches the chosen value

SOFTWARE/OS VERSIONS
Windows: Windows 10
Qt Version: 5.15.7
Comment 1 Dmitry Kazakov 2024-02-26 14:21:34 UTC
I can confirm the issue. The bug also happens when one attaches audio to the image. It resets internal FPS value back to 24.
Comment 2 Dmitry Kazakov 2024-02-26 14:41:28 UTC
Git commit 8ece4acc96f8b82255556660e4cb16c99b4b7e88 by Dmitry Kazakov.
Committed on 26/02/2024 at 14:40.
Pushed by dkazakov into branch 'master'.

Fix framerate issue when adding audio to the image

M  +3    -0    libs/ui/KisPlaybackEngineMLT.cpp

https://invent.kde.org/graphics/krita/-/commit/8ece4acc96f8b82255556660e4cb16c99b4b7e88
Comment 3 Dmitry Kazakov 2024-02-26 14:42:11 UTC
Git commit 5ed90baa010f578c6894d310ca48a52c53e7c28b by Dmitry Kazakov.
Committed on 26/02/2024 at 14:42.
Pushed by dkazakov into branch 'krita/5.2'.

Fix framerate issue when adding audio to the image

M  +3    -0    libs/ui/KisPlaybackEngineMLT.cpp

https://invent.kde.org/graphics/krita/-/commit/5ed90baa010f578c6894d310ca48a52c53e7c28b