Fix framerate issue when adding audio to the image

BUG:481388